--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "ejs": "^2.5.2",
     "email-validator": "^1.0.7",
     "express": "^4.14.0",
+    "express-fileupload": "0.0.5",
     "express-session": "^1.14.2",
     "express-validator": "^2.21.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-sass": "^2.3.2",
+    "imagemagick": "^0.1.3",
     "mongoose": "^4.6.6",
     "morgan": "^1.7.0",
     "node-cron": "^1.1.2",
