--- a/package.json
+++ b/package.json
@@ -1,60 +1,62 @@
 {
-    "name": "superman",
-    "version": "0.0.0",
-    "private": true,
-    "scripts": {
-        "start": "node app.js",
-        "dev": "nodemon app.js"
-    },
-    "dependencies": {
-        "async": "^2.1.2",
-        "babel-cli": "^6.18.0",
-        "babel-core": "^6.18.2",
-        "babel-polyfill": "^6.16.0",
-        "babel-preset-es2015": "^6.18.0",
-        "babel-register": "^6.18.0",
-        "bcrypt-nodejs": "0.0.3",
-        "body-parser": "^1.15.2",
-        "browser-sync": "^2.18.2",
-        "chai": "^3.5.0",
-        "chai-http": "^3.0.0",
-        "connect-flash": "^0.1.1",
-        "cookie-parser": "^1.4.3",
-        "cors": "^2.8.1",
-        "cron": "^1.1.1",
-        "crypto": "0.0.3",
-        "dotenv": "^2.0.0",
-        "ejs": "^2.5.2",
-        "email-validator": "^1.0.7",
-        "express": "^4.14.0",
-        "express-fileupload": "0.0.5",
-        "express-session": "^1.14.2",
-        "express-validator": "^2.21.0",
-        "gulp": "^3.9.1",
-        "gulp-autoprefixer": "^3.1.1",
-        "gulp-sass": "^2.3.2",
-        "imagemagick": "^0.1.3",
-        "mongoose": "^4.6.6",
-        "morgan": "^1.7.0",
-        "node-cron": "^1.1.2",
-        "nodemailer": "^2.6.4",
-        "passport": "^0.3.2",
-        "passport-local": "^1.0.0",
-        "password": "^0.1.1",
-        "q": "^1.4.1",
-        "webpack-stream": "^3.2.0"
-    },
-    "devDependencies": {
-        "babel-core": "^6.18.0",
-        "babel-loader": "^6.2.5",
-        "babel-polyfill": "^6.16.0",
-        "babel-preset-es2015": "^6.18.0",
-        "babel-preset-react": "^6.16.0",
-        "babel-preset-react-hmre": "^1.1.1",
-        "babel-register": "^6.18.0",
-        "nodemon": "^1.11.0",
-        "cross-env": "^3.1.3",
-        "raw-loader": "^0.5.1",
-        "style-loader": "^0.13.1"
-    }
+  "name": "superman",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
+  "dependencies": {
+    "async": "^2.1.2",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.18.2",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-register": "^6.18.0",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.15.2",
+    "browser-sync": "^2.18.2",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.1",
+    "cron": "^1.1.1",
+    "crypto": "0.0.3",
+    "dotenv": "^2.0.0",
+    "ejs": "^2.5.2",
+    "email-validator": "^1.0.7",
+    "express": "^4.14.0",
+    "express-fileupload": "0.0.5",
+    "express-session": "^1.14.2",
+    "express-validator": "^2.21.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-sass": "^2.3.2",
+    "imagemagick": "^0.1.3",
+    "jsonwebtoken": "^7.3.0",
+    "mongoose": "^4.6.6",
+    "morgan": "^1.7.0",
+    "node-cron": "^1.1.2",
+    "nodemailer": "^2.6.4",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "password": "^0.1.1",
+    "q": "^1.4.1",
+    "request": "^2.81.0",
+    "webpack-stream": "^3.2.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.18.0",
+    "babel-loader": "^6.2.5",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-register": "^6.18.0",
+    "nodemon": "^1.11.0",
+    "cross-env": "^3.1.3",
+    "raw-loader": "^0.5.1",
+    "style-loader": "^0.13.1"
+  }
 }
